<resources>
    <string name="app_name">Verdict</string>
    <string name="app_name_caps">VERDICT</string>
    <string name="app_catchphrase">THE LEGAL ASSISTANCE APP</string>
    <string name="tab_search">Search</string>
    <string name="tab_forum">Forum</string>
    <string name="tab_search_width">540px</string>
    <string name="search_hint_legal_area">Search by legal area</string>
    <string name="search_hint_location">Search by location</string>
    <string name="search_hint_lawyer">Search by lawyer name</string>
    <string name="search_button">Search</string>
    <string name="results_loading">Fetching results…</string>
    <string name="results_client_rating_text">Client Rating:</string>
    <string name="results_peer_rating_text">Peer Rating:</string>
    <string name="results_price_rating_text">Cost Estimate:</string>
    <string name="results_info_text">Showing %d results for %s Law around %s</string>
    <string name="results_forum_topic_card_text">Learn more about %s law on our associated Forum topic</string>
    <string name="details_leave_review">Leave a review</string>
    <string name="details_leave_review_verified">Reviews will be verified</string>
    <string name="details_leave_review_overall">Rate your overall experience</string>
    <string name="details_leave_review_price">Rate the cost of this lawyer</string>
    <string name="details_leave_review_cheap">$</string>
    <string name="details_leave_review_baller">$$$$</string>
    <string name="details_leave_review_submit">Submit</string>
    <string name="details_leave_review_prompt">Write a comment here!</string>
    <string name="background_for_card">background for card</string>
    <string-array name="law_topics">
        <item>"Admiralty"</item>
        <item>"Bankruptcy"</item>
        <item>"Business"</item>
        <item>"Civil Rights"</item>
        <item>"Criminal"</item>
        <item>"Entertainment"</item>
        <item>"Environmental"</item>
        <item>"Family"</item>
        <item>"Health"</item>
        <item>"Immigration"</item>
        <item>"Intellectual Property"</item>
        <item>"International"</item>
        <item>"Labor"</item>
        <item>"Military"</item>
        <item>"Personal Injury"</item>
        <item>"Real Estate"</item>
        <item>"Tax"</item>
    </string-array>
    <string name="sort_by">Sort By:</string>
    <string name="rating_sort">Most Recent</string>
    <string name="recent_sort">Highest Rating</string>
    <string name="top_answer">Top Answers</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_hint">Type your problem</string>
    <string name="response">Response</string>
    <bool name="force_generate_search">false</bool> # This is dangerous, DO NOT ENABLE for consecutive execution.
    <bool name="force_generate_forum">false</bool> # This will erase all forum data
    <bool name="debug_forum_data">false</bool>
</resources>
