<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.SearchScreen">

    <TextView
        android:id="@+id/verdict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/voltaire"
        android:text="@string/app_name_caps"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tab_forum_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/half_screen_width"
        android:height="@dimen/tab_search_height"
        android:background="@drawable/tab_button"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/tab_forum"
        android:textColor="@color/colorTabTextSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tab_search_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/half_screen_width"
        android:height="@dimen/tab_search_height"
        android:background="@drawable/tab_button"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/tab_search"
        android:textColor="@color/colorTabTextSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tab_search_highlight_search"
        android:layout_width="@dimen/half_screen_width"
        android:layout_height="@dimen/tab_search_highlight_height"
        android:alpha="255"
        android:contentDescription="@string/tab_search"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tab_search_search"
        app:layout_constraintEnd_toStartOf="@+id/tab_forum_search"
        app:layout_constraintStart_toStartOf="@+id/tab_search_search"
        app:srcCompat="@drawable/tab_button_highlight" />

    <ImageView
        android:id="@+id/tab_forum_highlight_search"
        android:layout_width="@dimen/half_screen_width"
        android:layout_height="@dimen/tab_search_highlight_height"
        android:alpha="255"
        android:contentDescription="@string/tab_forum"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tab_forum_search"
        app:layout_constraintEnd_toEndOf="@+id/tab_forum_search"
        app:layout_constraintStart_toStartOf="@+id/tab_forum_search"
        app:srcCompat="@drawable/tab_button_highlight" />

    <ImageView
        android:id="@+id/gavel_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/verdict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_gavel" />

    <TextView
        android:id="@+id/catchphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/secular_one"
        android:text="@string/app_catchphrase"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verdict" />

</androidx.constraintlayout.widget.ConstraintLayout>