<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGrey"
    tools:context=".ui.Forum.PostThreadActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TODO: refactor this to follow style of everthing else."
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="68dp" />

    <Button
        android:id="@+id/post_thread_tab_forum_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/half_screen_width"
        android:height="@dimen/tab_search_height"
        android:background="@drawable/tab_button"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/tab_forum"
        android:textColor="@color/colorTabTextSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/post_thread_tab_search_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/half_screen_width"
        android:height="@dimen/tab_search_height"
        android:background="@drawable/tab_button"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/tab_search"
        android:textColor="@color/colorTabTextSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/post_thread_tab_search_highlight_search"
        android:layout_width="@dimen/half_screen_width"
        android:layout_height="@dimen/tab_search_highlight_height"
        android:alpha="255"
        android:contentDescription="@string/tab_search"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_thread_tab_search_search"
        app:layout_constraintEnd_toStartOf="@+id/post_thread_tab_forum_search"
        app:layout_constraintStart_toStartOf="@+id/post_thread_tab_search_search"
        app:srcCompat="@drawable/tab_button_highlight" />

    <ImageView
        android:id="@+id/post_thread_tab_forum_highlight_search"
        android:layout_width="@dimen/half_screen_width"
        android:layout_height="@dimen/tab_search_highlight_height"
        android:alpha="255"
        android:contentDescription="@string/tab_forum"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_thread_tab_forum_search"
        app:layout_constraintEnd_toEndOf="@+id/post_thread_tab_forum_search"
        app:layout_constraintStart_toStartOf="@+id/post_thread_tab_forum_search"
        app:srcCompat="@drawable/tab_button_highlight" />

    <Spinner
        android:id="@+id/postThread_selectCategory"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_thread_tab_search_highlight_search" />

    <EditText
        android:id="@+id/postThread_titleContent"
        android:layout_width="269dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/postThread_titleWrapper"
        app:layout_constraintTop_toTopOf="@+id/postThread_titleWrapper" />

    <TextView
        android:id="@+id/postThread_titleWrapper"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:freezesText="true"
        android:translationZ="-3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postThread_selectCategory" />

    <TextView
        android:id="@+id/postThread_descriptionWrapper"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:freezesText="true"
        android:translationZ="-3dp"
        app:layout_constraintBottom_toTopOf="@+id/postThread_submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postThread_titleWrapper"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/postThread_descriptionContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:singleLine="false"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="@+id/postThread_descriptionWrapper"
        app:layout_constraintEnd_toEndOf="@+id/postThread_descriptionWrapper"
        app:layout_constraintStart_toStartOf="@+id/postThread_descriptionWrapper"
        app:layout_constraintTop_toBottomOf="@+id/postThread_descriptionTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/postThread_titleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="@+id/postThread_titleWrapper"
        app:layout_constraintTop_toTopOf="@+id/postThread_titleWrapper" />

    <TextView
        android:id="@+id/postThread_descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/postThread_descriptionWrapper"
        app:layout_constraintTop_toTopOf="@+id/postThread_descriptionWrapper" />

    <CheckBox
        android:id="@+id/postThread_anonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:buttonTint="#0F701B"
        android:checked="false"
        android:text="Anonymous"
        app:layout_constraintBottom_toBottomOf="@+id/postThread_submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/postThread_submitButton" />

    <Button
        android:id="@+id/postThread_submitButton"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorButtonSubmitGreen"
        android:text="Submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>